Bug fix on htsInitial consent

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -422,7 +422,7 @@
                 jq('#disability').show();
                 jq('#tbl-other-disability').show();
                }
-            otherDisabilitySelected();
+            //otherDisabilitySelected();
             var otherDisabilitySelected = function() {
                 var val = jq(this).val();
                 if (val == 5622) {
