--- a/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="../moduleResources/kenyaemr/scripts/moment.js"></script>
     <script type="text/javascript">
         var LATEST_SESSION = "<lookup expression="fn.latestObs(1639).valueNumeric"/>"
-        var LATEST_SESSION_START_DATE = "<lookup expression="fn.earliestObs(1639).getObsDatetime()"/>"
+        var LATEST_SESSION_START_DATE = "<lookup expression="fn.latestObs(1639).getObsDatetime()"/>"
         jQuery(function($) {
             //Defaults
             var adherenceResponses1=jq('#adherence-1');
@@ -38,8 +38,7 @@
                 jq('#viral-load-tab').show();
                 jq('#adherence-barriers-tab').hide();
             }
-            console.log("LATEST SESSION==>"+LATEST_SESSION);
-            console.log("LATEST SESSION START DATE==>"+LATEST_SESSION_START_DATE);
+
             if(LATEST_SESSION &gt; 0) {
                 var formattedSessionStartDate =moment(moment(LATEST_SESSION_START_DATE,'DD/MMM/YYYY').toDate()).format("DD-MMM-YYYY");
                 getField('session-startdate.value').val(formattedSessionStartDate);
