Updated booking date lable to return to care date

--- a/omod/src/main/webapp/resources/htmlforms/hiv/cccDefaulterTracing.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/cccDefaulterTracing.html
@@ -147,7 +147,7 @@
                         <obs conceptId="160721AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1267AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1118AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Contact, No Contact" style="radio" required="true" id="contact-status"/>
                     </td>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        Booking Date :
+                        Return to care date :
                         <obs conceptId="163526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="booking-date" allowFutureDates="true"/>
                     </td>
                 </tr>
