--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -63,6 +63,68 @@
             }
         };
 
+        //Setting
+        var onSettingSelected = function() {
+            var val = jq(this).val();
+            jq("#strategy option[value='161557']").show();  //IT
+            jq("#strategy option[value='159939']").show();  //MO
+            jq("#strategy option[value='5622']").show();     //O
+            jq("#hts-entry-point option[value='5622']").show();     //O
+            if (val == 1537 ) {   //Facility setting selected
+                clearHiddenSections(jq('#strategy'));
+                clearHiddenSections(jq('#hts-entry-point'));
+                //Strategy
+                jq("#strategy option[value='164163']").show();  //PITC
+                jq("#strategy option[value='164953']").show();  //NP
+                jq("#strategy option[value='164954']").show();   //VI
+                jq("#strategy option[value='164955']").hide();    //VS
+                jq("#strategy option[value='159938']").hide();    //HB
+                //Entry point
+                jq("#hts-entry-point option[value='5485']").show();    //IPD
+                jq("#hts-entry-point option[value='160542']").show();    //OPD
+                jq("#hts-entry-point option[value='162181']").show();    //PC
+                jq("#hts-entry-point option[value='160552']").show();    //NC
+                jq("#hts-entry-point option[value='160446']").show();    //ANC
+                jq("#hts-entry-point option[value='160456']").show();    //MAT
+                jq("#hts-entry-point option[value='1623']").show();    //PNC
+                jq("#hts-entry-point option[value='160541']").show();    //TB
+                jq("#hts-entry-point option[value='159940']").show();    //VCT
+                jq("#hts-entry-point option[value='162223']").show();    //VMMC
+                jq("#hts-entry-point option[value='160546']").show();    //STI
+                jq("#hts-entry-point option[value='160522']").show();    //ER
+                jq("#hts-entry-point option[value='163096']").hide();    //CT
+                jq("#hts-entry-point option[value='159938']").hide();    //HBT
+                jq("#hts-entry-point option[value='159939']").hide();    //MO
+
+            }else if(val == 163488 ) {
+                clearHiddenSections(jq('#strategy'));
+                clearHiddenSections(jq('#hts-entry-point'));
+                // strategy
+                jq("#strategy option[value='164163']").hide();  //PITC
+                jq("#strategy option[value='164953']").hide();  //NP
+                jq("#strategy option[value='164954']").hide();   //VI
+                jq("#strategy option[value='164955']").show();    //VS
+                jq("#strategy option[value='159938']").show();    //HB
+                   //Entry point
+                jq("#hts-entry-point option[value='163096']").show();    //CT
+                jq("#hts-entry-point option[value='159938']").show();    //HBT
+                jq("#hts-entry-point option[value='159939']").show();    //MO
+                jq("#hts-entry-point option[value='5485']").hide();    //IPD
+                jq("#hts-entry-point option[value='160542']").hide();    //OPD
+                jq("#hts-entry-point option[value='162181']").hide();    //PC
+                jq("#hts-entry-point option[value='160552']").hide();    //NC
+                jq("#hts-entry-point option[value='160446']").hide();    //ANC
+                jq("#hts-entry-point option[value='160456']").hide();    //MAT
+                jq("#hts-entry-point option[value='1623']").hide();    //PNC
+                jq("#hts-entry-point option[value='160541']").hide();    //TB
+                jq("#hts-entry-point option[value='159940']").hide();    //VCT
+                jq("#hts-entry-point option[value='162223']").hide();    //VMMC
+                jq("#hts-entry-point option[value='160546']").hide();    //STI
+                jq("#hts-entry-point option[value='160522']").hide();    //ER
+
+            }
+        };
+
 
         var hasDisabilitySelected = function () {
             var val = jq(this).val();
@@ -94,11 +156,11 @@
         var strategySelected = function () {
             var val = jq(this).val();
             if (val == 159938 ){
-                getField('hts-entry-point.value').prop("selectedIndex", 9);
+                getField('hts-entry-point.value').prop("selectedIndex", 14);
             }else if (val == 159939 ){
-                getField('hts-entry-point.value').prop("selectedIndex", 10);
+                getField('hts-entry-point.value').prop("selectedIndex", 15);
             }else if (val == 164954 || val == 164955){
-                getField('hts-entry-point.value').prop("selectedIndex", 8);
+                getField('hts-entry-point.value').prop("selectedIndex", 9);
             }
             // Specify other
             if (val == 5622){
@@ -430,6 +492,7 @@
             jq('#population-type :input[type=radio]').change(populationTypeSelected);
             jq('#share-results :input[type=radio]').change(willingnessToShareSelfTestResults);
             jq('#client-done-test :input[type=radio]').change(isSelfTestDoneInLast12months);
+            jq('#setting :input[type=radio]').change(onSettingSelected);
             //disability
             jq('#has-disability input').change(hasDisabilitySelected);
             jq('#has-other-disability :input[type=checkbox]').change(hasOtherDisabilitySelected);
@@ -445,13 +508,41 @@
             jq("#test-results").hide();
             jq("#willingness-share-results").hide();
 
+            //strategy
+            jq("#strategy option[value='164163']").hide();  //PITC
+            jq("#strategy option[value='164953']").hide();  //NP
+            jq("#strategy option[value='164954']").hide();   //VI
+            jq("#strategy option[value='164955']").hide();    //VS
+            jq("#strategy option[value='159938']").hide();    //HB
+            jq("#strategy option[value='161557']").hide();  //IT
+            jq("#strategy option[value='159939']").hide();  //MO
+            jq("#strategy option[value='5622']").hide();     //O
+            //Entry points
+            jq("#hts-entry-point option[value='163096']").hide();    //CT
+            jq("#hts-entry-point option[value='159938']").hide();    //HBT
+            jq("#hts-entry-point option[value='159939']").hide();    //MO
+            jq("#hts-entry-point option[value='5485']").hide();    //IPD
+            jq("#hts-entry-point option[value='160542']").hide();    //OPD
+            jq("#hts-entry-point option[value='162181']").hide();    //PC
+            jq("#hts-entry-point option[value='160552']").hide();    //NC
+            jq("#hts-entry-point option[value='160446']").hide();    //ANC
+            jq("#hts-entry-point option[value='160456']").hide();    //MAT
+            jq("#hts-entry-point option[value='1623']").hide();    //PNC
+            jq("#hts-entry-point option[value='160541']").hide();    //TB
+            jq("#hts-entry-point option[value='159940']").hide();    //VCT
+            jq("#hts-entry-point option[value='162223']").hide();    //VMMC
+            jq("#hts-entry-point option[value='160546']").hide();    //STI
+            jq("#hts-entry-point option[value='160522']").hide();    //ER
+            jq("#hts-entry-point option[value='5622']").hide();    //O
+
+
             var htsStrategySelected = getField('strategy.value').val();
                 if (htsStrategySelected == 159938 ){
-                    getField('hts-entry-point.value').prop("selectedIndex", 9);
+                    getField('hts-entry-point.value').prop("selectedIndex", 14);
                 }else if (htsStrategySelected == 159939 ){
-                    getField('hts-entry-point.value').prop("selectedIndex", 10);
+                    getField('hts-entry-point.value').prop("selectedIndex", 15);
                 }else if (htsStrategySelected == 164954 || htsStrategySelected == 164955){
-                    getField('hts-entry-point.value').prop("selectedIndex", 8);
+                    getField('hts-entry-point.value').prop("selectedIndex", 9);
                 }
                 // Specify other
                 if (htsStrategySelected == 5622){
@@ -670,7 +761,7 @@
                         <script type="text/javascript">
                             jq(function(){
 
-                                //First test
+                                  //First test
                                 var firstTest = getField("hiv-test1-result.value").val();
                                 //Negative
                                 if(firstTest ==664) {
@@ -770,6 +861,64 @@
                                 if(syphylisTest1Results != ""){
                                     jq('#dual-results-1').show();
                                 }
+
+                                //Setting
+                                var onSettingSelected = function() {
+                                    var val = jq(this).val();
+                                    jq("#strategy option[value='161557']").show();  //IT
+                                    jq("#strategy option[value='159939']").show();  //MO
+                                    jq("#strategy option[value='5622']").show();     //O
+                                    jq("#hts-entry-point option[value='5622']").show();     //O
+                                    if (val == 1537 ) {   //Facility setting selected
+                                        //Strategy
+                                        jq("#strategy option[value='164163']").show();  //PITC
+                                        jq("#strategy option[value='164953']").show();  //NP
+                                        jq("#strategy option[value='164954']").show();   //VI
+                                        jq("#strategy option[value='164955']").hide();    //VS
+                                        jq("#strategy option[value='159938']").hide();    //HB
+                                        //Entry point
+                                        jq("#hts-entry-point option[value='5485']").show();    //IPD
+                                        jq("#hts-entry-point option[value='160542']").show();    //OPD
+                                        jq("#hts-entry-point option[value='162181']").show();    //PC
+                                        jq("#hts-entry-point option[value='160552']").show();    //NC
+                                        jq("#hts-entry-point option[value='160446']").show();    //ANC
+                                        jq("#hts-entry-point option[value='160456']").show();    //MAT
+                                        jq("#hts-entry-point option[value='1623']").show();    //PNC
+                                        jq("#hts-entry-point option[value='160541']").show();    //TB
+                                        jq("#hts-entry-point option[value='159940']").show();    //VCT
+                                        jq("#hts-entry-point option[value='162223']").show();    //VMMC
+                                        jq("#hts-entry-point option[value='160546']").show();    //STI
+                                        jq("#hts-entry-point option[value='160522']").show();    //ER
+                                        jq("#hts-entry-point option[value='163096']").hide();    //CT
+                                        jq("#hts-entry-point option[value='159938']").hide();    //HBT
+                                        jq("#hts-entry-point option[value='159939']").hide();    //MO
+
+                                    }else if(val == 163488 ) {
+                                        // strategy
+                                        jq("#strategy option[value='164163']").hide();  //PITC
+                                        jq("#strategy option[value='164953']").hide();  //NP
+                                        jq("#strategy option[value='164954']").hide();   //VI
+                                        jq("#strategy option[value='164955']").show();    //VS
+                                        jq("#strategy option[value='159938']").show();    //HB
+                                        //Entry point
+                                        jq("#hts-entry-point option[value='163096']").show();    //CT
+                                        jq("#hts-entry-point option[value='159938']").show();    //HBT
+                                        jq("#hts-entry-point option[value='159939']").show();    //MO
+                                        jq("#hts-entry-point option[value='5485']").hide();    //IPD
+                                        jq("#hts-entry-point option[value='160542']").hide();    //OPD
+                                        jq("#hts-entry-point option[value='162181']").hide();    //PC
+                                        jq("#hts-entry-point option[value='160552']").hide();    //NC
+                                        jq("#hts-entry-point option[value='160446']").hide();    //ANC
+                                        jq("#hts-entry-point option[value='160456']").hide();    //MAT
+                                        jq("#hts-entry-point option[value='1623']").hide();    //PNC
+                                        jq("#hts-entry-point option[value='160541']").hide();    //TB
+                                        jq("#hts-entry-point option[value='159940']").hide();    //VCT
+                                        jq("#hts-entry-point option[value='162223']").hide();    //VMMC
+                                        jq("#hts-entry-point option[value='160546']").hide();    //STI
+                                        jq("#hts-entry-point option[value='160522']").hide();    //ER
+
+                                    }
+                                };
                             });
                         </script>
                     </ifMode>
@@ -923,6 +1072,29 @@
 
             </table>
         </fieldset>
+        <fieldset id="hts-setting">
+            <legend>Setting</legend>
+            <table id="tbl-setting">
+                <tr>
+                    <td>HTS Setting: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                        <obs id="setting" conceptId="165215"  answerConceptIds="1537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163488AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             style="radio" answerLabels="Facility,Community" required="true" />
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
+        <fieldset id="hts-approach">
+            <legend>Approach</legend>
+            <table id="tbl-approach">
+                <tr>
+                    <td>HTS Approach: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                                      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                        <obs id="approach" conceptId="163556"  answerConceptIds="164163,164953"
+                             style="dropdown" answerLabels="Provider Initiated Testing(PITC),Client Initiated Testing (CITC)" />
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
         <fieldset>
             <legend>HTS Strategy</legend>
             <table id="tbl-hts-strategy">
@@ -931,8 +1103,22 @@
                         <obs class="hts-strategy"
                              id="strategy"
                              conceptId="164956"
-                             answerConceptIds="164163AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164953,164954,164955,159938AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159939AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161557AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             answerLabels="Provider Initiated Testing(PITC),Client Initiated Testing,Integrated VCT Center,Stand Alone VCT Center,Home Based Testing,Mobile Outreach HTS,PNS,Other"
+                             answerConceptIds="164163AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                               164953,
+                                               164954,
+                                               164955,
+                                               159938AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                               159939AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                               161557AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                               5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             answerLabels="HP:Provider Initiated Testing(PITC),
+                                           NP: HTS for non-patients,
+                                           VI:Integrated VCT Center,
+                                           Stand Alone VCT Center,
+                                           Home Based Testing,
+                                           MO: Mobile Outreach HTS,
+                                           Index testing,
+                                           O: Others"
                         />
                     </td>
                     <td>
@@ -955,8 +1141,38 @@
                     <td>Indicate HTS entry point: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                         <obs id="hts-entry-point"
                              conceptId="160540"
-                             answerConceptIds="5485,160542,162181,160552,160538,160541,162050,159940,159938,159939,5622"
-                             answerLabels="In Patient Department(IPD),Out Patient Department(OPD),Peadiatric Clinic,Nutrition Clinic,PMTCT,TB,CCC,VCT,Home Based Testing,Mobile Outreach,Other"
+                             answerConceptIds="5485,
+                                               160542,
+                                               162181,
+                                               160552,
+                                               160446,
+                                               160456,
+                                               1623,
+                                               160541,
+                                               159940,
+                                               162223,
+                                               160546,
+                                               160522,
+                                               163096,
+                                               159938,
+                                               159939,
+                                               5622"
+                             answerLabels="In Patient Department(IPD),
+                                           Out Patient Department(OPD),
+                                           Peadiatric Clinic,
+                                           Nutrition Clinic,
+                                           PMTCT - ANC,
+                                           PMTCT - MAT,
+                                           PMTCT - PNC,
+                                           TB,
+                                           VCT,
+                                           VMMC,
+                                           STI Clinic,
+                                           Emergency,
+                                           Community Testing,
+                                           Home Based Testing,
+                                           Mobile Outreach,
+                                           Other"
                         />
                     </td>
                 </tr>
