Added booking date and tracing date in Lost to followup report

--- a/omod/src/main/webapp/resources/htmlforms/cervicalCancerScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/cervicalCancerScreening.html
@@ -316,7 +316,7 @@
 				<tr>
 					<td>Next appointment date</td>
 					<td>
-						<obs id="appointment" conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
+						<obs id="appointment" conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
 					</td>
 					<td></td>
 				</tr>
