Revised TX_PVLS query in datim report, last 12 months VL queries in Dashboard VL tracker, MOH731, and Viral suppression linelist. Added Transgender KP type in HIV greencard.

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -2682,6 +2682,8 @@ Management<br />
                             <td>
                                 <obs conceptId="160581AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="105AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                      answerLabel="People who inject drugs" style="checkbox" /><br/>
+                                <obs conceptId="160581AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="165100"
+                                     answerLabel="Transgender" style="checkbox" /><br/>
                                 <includeIf velocityTest="$patient.gender == 'M'">
                                     <obs conceptId="160581AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="160578AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                          answerLabel="Men who have sex with men" style="checkbox" /><br/>
