--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
@@ -322,8 +322,8 @@
 					<table id="general-death-cause">
 						<tr>
 							<td>Death reason:</td>
-							<td><obs conceptId="1599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="163324AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,116030AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160159AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160158AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,133478AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,123812AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,142917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="HIV disease resulting in TB,HIV disease resulting in cancer,HIV disease resulting in other infectious and parasitic diseases,Other HIV disease resulting in other diseases or conditions leading to death,Other natural causes not directly related to HIV,Non-natural causes,Unknown cause" id="death-reason" /></td>
+							<td><obs conceptId="1599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="163324AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,116030AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160159AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160158AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,133478AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,145439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,123812AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,142917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="HIV disease resulting in TB,HIV disease resulting in cancer,HIV disease resulting in other infectious and parasitic diseases,Other HIV disease resulting in other diseases or conditions leading to death,Other natural causes not directly related to HIV,Non-communicable diseases such as Diabetes and hypertension,Non-natural causes,Unknown cause" id="death-reason" /></td>
 							<td></td>
 							<td></td>
 						</tr>
